Optimizations.